# whitetrace

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_threshold.py
docs/: project-plan.md
whitetrace/: __init__.py  batch_process.py  cli.py
whitetrace/processing/: __init__.py  builder.py  evaluator.py  loader.py  threshold.py  vectorize.py
